--- a/style.css
+++ b/style.css
@@ -4,21 +4,23 @@ body {
     background-color: #f6f9fc;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
         Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    display: flex;
+    display: flex; 
     flex-direction: column;
+    align-items: center;
+    padding: 50px 0px 50px 0px;    /* 시계방향으로. 상으로 50 하로 50 */
 }
 
 .canvas {
     width: 700px;
     height: 700px;
-    background-color: white;
-    border-radius: 15px;
+    background-color: white;  /* 마 이게 주석이다 */
+    border-radius: 15px;      /* 직경 둘레 깎기 */
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
-
+    
 }
 
 .controls__colors {
-    display: flex;
+    display: flex;  /* 디스플레이 크기에 맞춰서 div(컨테이너) 크기 조절을 자동 */
 }
 
 .controls__colors .controls__color {
@@ -26,3 +28,39 @@ body {
     height: 50px;
     border-radius: 25px;
 }
+
+.controls {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 80px;
+}
+
+.controls .controls__btns {
+    margin-bottom: 30px;
+}
+
+.controls__btns button{
+    all: unset;
+    cursor: pointer; /* 마우스 올렸을때 모양*/
+    background-color: white;
+    padding: 5px 0px;
+    width : 80px;
+    text-align: center;
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    color: rgba(0, 0, 0, 0.8);
+    text-transform: uppercase;
+    font-weight: 800;
+    font-size: 12px;
+}
+
+.controls .controls__range{
+    margin-bottom: 30px;
+}
+
+.controls__btns button:active{
+    transform: scale(0.98); /* 애니메이션? */
+}
+
